--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "esbuild-windows-64": "^0.15.11",
     "fill-range": "^7.0.1",
     "follow-redirects": "^1.15.2",
+    "font-awesome": "^4.7.0",
     "form-data": "^4.0.0",
     "function-bind": "^1.1.1",
     "glob-parent": "^5.1.2",
